--- a/SMDGolfScore/www/index.html
+++ b/SMDGolfScore/www/index.html
@@ -11,18 +11,17 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>SMDGolfScore</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="scripts/platformOverrides.js"></script>
         <script type="text/javascript" src="scripts/index.js"></script>
+        <script type="text/javascript" src="scripts/jquery-2.1.0.min.js"></script>
+        <script type="text/javascript" src="scripts/jquery.mobile-1.4.5.min.js"></script>
+        <title>SMDGolfScore</title>
+    </head>
+    <body>
+        <h1 style="color:red;">Barack Obama</h1>
+        <p>Barack Obama is the current President of the United States.</p>
+        <a href="personal.html">Know Personal Details</a><br />
+        <a href="professional.html">Know Professional Details</a>
     </body>
 </html>
